--- a/style.css
+++ b/style.css
@@ -8,11 +8,20 @@ body {
   flex-shrink: 0;
   background: #fff;
 }
+main {
+  display: flex;
+}
 .headtop {
   display: flex;
 }
+.Up {
+  padding-top: 40px;
+  padding-left: 375px;
+}
 .growbe {
   display: flex;
+  padding-top: 45px;
+  padding-left: 14px;
 }
 .grow {
   color: #000;
@@ -29,6 +38,15 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+.menu {
+  padding-top: 51px;
+  padding-left: 500px;
+  padding-right: 375px;
+  width: 533px;
+  height: 17px;
+  display: flex;
+  gap: 30px;
 }
 .menu a {
   text-decoration: none;
@@ -52,11 +70,18 @@ body {
 }
 .heading {
   color: #000;
+  display: flex;
   font-family: Gilroy-Bold;
   font-size: 60px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  padding-left: 373px;
+  padding-top: 89px;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 522px;
+  height: 222px;
 }
 .maintext {
   color: #888;
@@ -65,6 +90,17 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  padding-left: 373px;
+  padding-top: 17px;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  width: 466px;
+  height: 48px;
+}
+.buttons {
+  padding-left: 375px;
+  padding-top: 52px;
 }
 .startnow {
   width: 140px;
@@ -89,14 +125,28 @@ body {
   line-height: normal;
   background: #fff;
   border: none;
+  padding-left: 72px;
 }
 .picture {
   width: 544.814px;
   height: 374.843px;
   flex-shrink: 0;
+  padding-right: 439px;
+  padding-left: 40.94px;
+  padding-top: 94.71px;
+}
+footer {
+  width: 1920px;
+  height: 243px;
+  flex-shrink: 0;
+}
+.logo {
+  display: flex;
+  gap: 48px;
+  padding-left: 345px;
+  padding-top: 97px;
 }
 .logolink {
   width: 160px;
   height: 50px;
-  flex-shrink: 0;
 }
