--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 body {
   width: 1920px;
-  height: 700px;
   flex-shrink: 0;
   background: #fff;
 }
@@ -149,4 +148,268 @@ footer {
 .logolink {
   width: 160px;
   height: 50px;
+}
+
+.floor1 {
+  display: flex;
+  width: auto;
+  height: 507px;
+  padding: 100px 373px;
+  justify-content: center;
+  align-items: center;
+  gap: 61px;
+
+  background: #fafafa;
+}
+
+.about_us {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex: 1 0 0;
+}
+
+.f1_b img {
+  width: 643px;
+  height: 507px;
+  flex-shrink: 0;
+}
+
+.f1_b {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  flex: 1 0 0;
+}
+
+.f1_bt {
+  display: flex;
+  width: 511px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.f1_bht {
+  align-self: stretch;
+  color: #000;
+
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+}
+
+.f1_bst {
+  align-self: stretch;
+  color: #888;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+}
+
+.learn {
+  display: flex;
+  width: 140px;
+  padding: 16px 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 56px;
+  background: #f25822;
+  color: #fff;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.2);
+}
+
+.floor2 {
+  display: flex;
+  width: 0 auto;
+  padding: 100px 373px;
+  justify-content: center;
+  align-items: center;
+  gap: 61px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.floor2_block {
+  width: 310px;
+  height: 230px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 25px;
+  padding: 25px;
+}
+
+.floor2_block img {
+  width: 70px;
+  height: 70px;
+}
+
+.f2_btext {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 18px;
+}
+.f2_bh {
+  color: #000;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.f2_bs {
+  width: 310px;
+  height: 42px;
+  color: #666;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.f2_bf a {
+  color: #000;
+  text-decoration: none;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+}
+
+.floor3 {
+  display: flex;
+  width: auto;
+  padding: 100px 373px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+  background: #fafafa;
+}
+
+.f3_text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  align-self: stretch;
+}
+
+.f3_th {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+}
+
+.f3_ts {
+  color: #888;
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  width: 740px;
+}
+
+.f3_blocks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  align-self: stretch;
+  width: auto;
+}
+
+.f3_b {
+  display: flex;
+  padding: 0px 34px 34px 34px;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+  flex: 1 0 0;
+  background: #fff;
+
+  box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+}
+
+.f3_b img {
+  width: 310px;
+  height: 192px;
+  flex-shrink: 0;
+}
+
+.f3_bd {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  align-self: stretch;
+  width: 310px;
+  height: 192px;
+}
+
+.f3_bht {
+  color: #000;
+  align-self: stretch;
+  text-align: center;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  width: 310px;
+  height: 29px;
+}
+
+.f3_bst {
+  color: #666;
+  align-self: stretch;
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  width: 310px;
+  height: 72px;
+}
+
+.f3_button {
+  display: flex;
+  padding: 16px 32px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 56px;
+  background: #f25822;
+  box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.2);
+  color: #fff;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
